# pvr.vbox

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
addon/: addon.xml.in
addon/resources/: settings.xml
addon/resources/language/English/: strings.po
debian/: changelog  changelog.in  control  copyright  kodi-pvr-vbox.install  rules
depends/common/tinyxml2/: flags.txt
lib/libxmltv/: CMakeLists.txt
lib/libxmltv/xmltv/: Guide.cpp  Programme.cpp  Programme.h  Utilities.cpp  Utilities.h
lib/xmltv/: CMakeLists.txt  Guide.cpp  Guide.h  Programme.cpp  Schedule.h  Utilities.cpp
project/VS2010Express/: pvr.vbox.vcxproj  pvr.vbox.vcxproj.filters
pvr.vbox/: addon.xml  addon.xml.in  changelog.txt
pvr.vbox/resources/: category_to_genre_types.xml  instance-settings.xml  settings.xml
pvr.vbox/resources/language/English/: strings.po
pvr.vbox/resources/language/resource.language.af_za/: strings.po
pvr.vbox/resources/language/resource.language.am_et/: strings.po
pvr.vbox/resources/language/resource.language.ar_sa/: strings.po
pvr.vbox/resources/language/resource.language.ast_es/: strings.po
pvr.vbox/resources/language/resource.language.az_az/: strings.po
pvr.vbox/resources/language/resource.language.be_by/: strings.po
pvr.vbox/resources/language/resource.language.bg_bg/: strings.po
pvr.vbox/resources/language/resource.language.bs_ba/: strings.po
pvr.vbox/resources/language/resource.language.ca_es/: strings.po
pvr.vbox/resources/language/resource.language.cs_cz/: strings.po
pvr.vbox/resources/language/resource.language.cy_gb/: strings.po
pvr.vbox/resources/language/resource.language.da_dk/: strings.po
pvr.vbox/resources/language/resource.language.de_de/: strings.po
pvr.vbox/resources/language/resource.language.el_gr/: strings.po
pvr.vbox/resources/language/resource.language.en_au/: strings.po
pvr.vbox/resources/language/resource.language.en_gb/: strings.po
pvr.vbox/resources/language/resource.language.en_nz/: strings.po
pvr.vbox/resources/language/resource.language.en_us/: strings.po
pvr.vbox/resources/language/resource.language.eo/: strings.po
pvr.vbox/resources/language/resource.language.es_ar/: strings.po
pvr.vbox/resources/language/resource.language.es_es/: strings.po
pvr.vbox/resources/language/resource.language.es_mx/: strings.po
pvr.vbox/resources/language/resource.language.et_ee/: strings.po
pvr.vbox/resources/language/resource.language.eu_es/: strings.po
pvr.vbox/resources/language/resource.language.fa_af/: strings.po
pvr.vbox/resources/language/resource.language.fa_ir/: strings.po
pvr.vbox/resources/language/resource.language.fi_fi/: strings.po
pvr.vbox/resources/language/resource.language.fo_fo/: strings.po
pvr.vbox/resources/language/resource.language.fr_ca/: strings.po
pvr.vbox/resources/language/resource.language.fr_fr/: strings.po
pvr.vbox/resources/language/resource.language.gl_es/: strings.po
pvr.vbox/resources/language/resource.language.he_il/: strings.po
pvr.vbox/resources/language/resource.language.hi_in/: strings.po
pvr.vbox/resources/language/resource.language.hr_hr/: strings.po
pvr.vbox/resources/language/resource.language.hu_hu/: strings.po
pvr.vbox/resources/language/resource.language.id_id/: strings.po
pvr.vbox/resources/language/resource.language.is_is/: strings.po
pvr.vbox/resources/language/resource.language.it_it/: strings.po
pvr.vbox/resources/language/resource.language.ja_jp/: strings.po
pvr.vbox/resources/language/resource.language.ko_kr/: strings.po
pvr.vbox/resources/language/resource.language.lt_lt/: strings.po
src/: VBoxInstance.cpp  VBoxInstance.h  addon.cpp  addon.h  client.cpp  client.h  compat.h
src/timeshift/: Buffer.cpp  Buffer.h  DummyBuffer.cpp  DummyBuffer.h  FilesystemBuffer.cpp  FilesystemBuffer.h
src/vbox/: AddonSettings.cpp  AddonSettings.h  CategoryGenreMapper.cpp  CategoryGenreMapper.h  Channel.cpp  Channel.h  ChannelStreamingStatus.cpp  ChannelStreamingStatus.h  ContentIdentifier.h  Exceptions.h  GuideChannelMapper.cpp  GuideChannelMapper.h  InstanceSettings.cpp  InstanceSettings.h  Recording.cpp  Recording.h  RecordingReader.cpp  RecordingReader.h  Reminder.cpp  Reminder.h  ReminderManager.cpp  ReminderManager.h  SeriesRecording.cpp  SeriesRecording.h  Settings.h  SettingsMigration.cpp  SettingsMigration.h  SoftwareVersion.cpp  SoftwareVersion.h  StartupState.cpp  StartupStateHandler.cpp  StartupStateHandler.h  Utilities.h  VBox.cpp  VBox.h
src/vbox/request/: ApiRequest.cpp  ApiRequest.h  FileRequest.h  IRequest.h  Request.cpp  Request.h
src/vbox/response/: Content.cpp  Content.h  Factory.h  Response.cpp  Response.h
src/vbox/timeshift/: Buffer.cpp  Buffer.h  DummyBuffer.cpp  DummyBuffer.h  FilesystemBuffer.cpp  FilesystemBuffer.h
src/vbox/util/: IHashable.h  StartupStateHandler.h  Url.cpp  Url.h
src/vbox/xmltv/: Guide.cpp  Guide.h  Programme.cpp  Programme.h  Schedule.h  Utilities.cpp  Utilities.h
src/xmltv/: Channel.cpp  Channel.h  Guide.cpp  Guide.h  Programme.cpp  Programme.h  Schedule.cpp  Schedule.h  Utilities.cpp  Utilities.h
(+33 files in other folders)
